Fixed - 362880: [Text] Horizontal scrollbar cutoff with the new default theme https://bugs.eclipse.org/bugs/show_bug.cgi?id=362880

--- a/bundles/org.eclipse.rap.rwt/widgetkits/org/eclipse/swt/internal/widgets/textkit/Text.default.css
+++ b/bundles/org.eclipse.rap.rwt/widgetkits/org/eclipse/swt/internal/widgets/textkit/Text.default.css
@@ -1,13 +1,13 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2011 Innoopract Informationssysteme GmbH.
+ * Copyright (c) 2008, 2011 Innoopract Informationssysteme GmbH and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
- *     Innoopract Informationssysteme GmbH - initial API and implementation
- *     EclipseSource - ongoing development
+ *    Innoopract Informationssysteme GmbH - initial API and implementation
+ *    EclipseSource - ongoing development
  ******************************************************************************/
 
 /* Text default theme */
@@ -20,6 +20,10 @@ Text {
   background-color: #f0f0f0;
   background-image: none;
   text-shadow: none;
+}
+
+Text[MULTI] {
+  padding: 0 0 0 4px;
 }
 
 Text[BORDER] {
